[package]
name = "n8iv_blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"
curve25519-dalek = "3.0"
ed25519-dalek = { version = "1.0.0-pre.3", features = ["rand"] }  # Use a specific pre-release version with rand feature
rand = { version = "0.8.3", features = ["getrandom", "std"] }  # Use specific version of rand
rand_core = "0.6.2"  # Ensure compatibility with rand_core
