[package]
name = "n8iv_blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
blake2 = "0.9"
sha2 = "0.9"
ed25519-dalek = "1.0"
futures = "0.3"
zeroize = "1.3"
curve25519-dalek = "3.1"
hyper = { version = "0.14", features = ["full"] }
reqwest = "0.11"
jsonrpc-http-server = "15.2"
crossbeam = "0.8"
regex = "1.4"
